--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>SpaceWalkers</title>
 
@@ -16,12 +17,21 @@
 
 <body>
 
- <!-- navigation code here -->
+  <nav>
+    <h1>SpaceWalkers</h1>
+
+    <a href="#"> Home </a>
+    <a href="#"> About Us </a>
+    <a href="#"> Blog </a>
+    <a href="#"> Contact </a>
+    <a href="#"> Sign In </a>
+  </nav>
+ 
 
   <div class="container home">
 
     <header class="intro">
-       <!-- image code here -->
+      <img class="logo" src="img/main-header.png">
 
       <h2>Lift Off</h2>
     
